fixed input overflow, added calculator explanation

--- a/src/styles/CreateAcct.module.css
+++ b/src/styles/CreateAcct.module.css
@@ -8,29 +8,6 @@
   border-radius: 30px;
 }
 
-/* .form {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  background-color: var(--tertiary);
-  margin: 10px;
-  padding: 10px;
-  border-radius: 30px;
-}
-
-.label {
-  display: flex;
-  margin-block: 5px;
-  width: 100%;
-}
-
-.input {
-  flex-grow: 1;
-  padding: 5px;
-  border-radius: 50px;
-  font-size: 1.2rem;
-} */
-
 .form {
   display: flex;
   flex-direction: column;
@@ -49,10 +26,13 @@
 
 .input {
   flex-grow: 1;
+  max-width: 70%;
   padding: 5px;
   border-radius: 50px;
   font-size: 1.3rem;
+  min-width: 0;
 }
+
 input:focus {
   background-color: var(--tertiary);
 }
